manifests/k8s/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-controller
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: kubernetes.docker.internal
    http:
      paths:
      - path: /api/users
        pathType: Prefix
        backend:
          service:
            name: myshop-user-service
            port:
              number: 3005
      - path: /api/address
        pathType: Prefix
        backend:
          service:
            name: myshop-user-service
            port:
              number: 3005
      - path: /api/products
        pathType: Prefix
        backend:
          service:
            name: myshop-product-service
            port:
              number: 3004
      - path: /api/cart
        pathType: Prefix
        backend:
          service:
            name: myshop-cart-service
            port:
              number: 3003
      - path: /api/admin
        pathType: Prefix
        backend:
          service:
            name: myshop-admin-service
            port:
              number: 3002
      - path: /api/images
        pathType: Prefix
        backend:
          service:
            name: myshop-admin-service
            port:
              number: 3002
      - path: /api/auth
        pathType: Prefix
        backend:
          service:
            name: myshop-auth-service
            port:
              number: 3001
